--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,500;0,600;0,900;1,700&display=swap" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="../node_modules/animate.css/animate.min.css"> -->
     <script src="https://kit.fontawesome.com/292d4e8440.js" crossorigin="anonymous"></script>
 </head>
 
